# CameraPrototype

./: CMakeLists.txt  README.md  prototype.cpp  thresholding.cpp
